--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc17",
+    "gsap": "^3.12.4",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "^18",
